--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js" 
+    "dev": "nodemon server.js"
   },
   "keywords": [
     "smart-school",
@@ -15,11 +15,12 @@
     "express"
   ],
   "author": "Your Name / Team",
-  "license": "ISC", 
+  "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1" 
+    "cors": "^2.8.5",
+    "express": "^4.17.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.7" 
+    "nodemon": "^2.0.7"
   }
-} 
+}
